--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,8 @@ import { SITE_TITLE } from '../consts';
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/web-site/">Home</HeaderLink>
+			<HeaderLink href="/web-site/about">About</HeaderLink>
 			<!--
 			<HeaderLink href="/blog">Blog</HeaderLink>
 			-->
