hotfix: page title link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE } from '../consts';
 
 <header>
 	<nav>
-		<h2><a href="/">{SITE_TITLE}</a></h2>
+		<h2><a href="/web-site/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/web-site/">Home</HeaderLink>
 			<HeaderLink href="/web-site/about">About</HeaderLink>
