--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -89,7 +89,7 @@ import Layout from '../layouts/BlogPost.astro';
   
   <div class="job">
     <h4>🖥️ MLOps Engineer - AI Production Team Lead</h4>
-    <p><strong>Translated</strong> | Rome, Italy | Dec 2023 - Present</p>
+    <p><strong>Translated</strong> | Rome, Italy | Dec 2023 - Sep 2024</p>
     <p>Established a Kubernetes cluster for AI application training and deployment. Oversaw both internal and external AI tools development, emphasizing model optimization and deployment automation streamlining.</p>
   </div>
   
